--- a/Code.ipynb
+++ b/Code.ipynb
@@ -105,6 +105,7 @@
     "\n",
     "\n",
     "def visualize_3d_grid_matplotlib():\n",
+    "    #TODO: improve the visualization (maybe use a different color for each net and visualize the routing progress as a video or a series of frames)\n",
     "    global grid, grid_dimensions\n",
     "\n",
     "    # Extract grid dimensions\n",
@@ -260,6 +261,7 @@
     "\n",
     "    for net_name, pins in ordered_nets:\n",
     "        paths = []\n",
+    "        #TODO: implement a heuristic to choose the first source we should begin with\n",
     "        pins_covered_map = {pin: False for pin in pins}\n",
     "        pins_covered_map[pins[0]] = True\n",
     "        unreached_targets = [key for key, value in list(pins_covered_map.items())[1:] if not value]\n",
