Add test cases and update README.md
Co-Authored-By: Noureldeen Allama <90619120+NoureldeenAllama@users.noreply.github.com>

--- a/Code.ipynb
+++ b/Code.ipynb
@@ -127,24 +127,40 @@
     "            for col in range(cols):\n",
     "                cell = grid[layer][row][col]\n",
     "\n",
-    "                if path and cell['path_num'] != path:\n",
-    "                    continue\n",
-    "                if net and cell['net_num'] != net:\n",
-    "                    continue\n",
-    "\n",
     "                if cell['used_in_path']:\n",
     "                    value = 1\n",
     "                elif cell['via']:\n",
-    "                    value = 3\n",
-    "                elif cell['obstruction']:\n",
-    "                    value = 2\n",
+    "                    if layer == 0:\n",
+    "                        grid_matrix_layer0[col][row] = 1\n",
+    "                    else:\n",
+    "                        grid_matrix_layer1[col][row] = 1\n",
     "                else:\n",
-    "                    value = 0\n",
-    "\n",
-    "                if layer == 0:\n",
-    "                    grid_matrix_layer0[col][row] = value\n",
-    "                else:\n",
-    "                    grid_matrix_layer1[col][row] = value\n",
+    "                    if layer == 0:\n",
+    "                        grid_matrix_layer0[col][row] = 0\n",
+    "                    else:\n",
+    "                        grid_matrix_layer1[col][row] = 0\n",
+    "                if cell['via']:\n",
+    "                    if layer == 0:\n",
+    "                        grid_matrix_layer0[col][row] = 3\n",
+    "                    else:\n",
+    "                        grid_matrix_layer1[col][row] = 3\n",
+    "                if path:\n",
+    "                    if cell['path_num'] != path:\n",
+    "                        if layer == 0:\n",
+    "                            grid_matrix_layer0[col][row] = 0\n",
+    "                        else:\n",
+    "                            grid_matrix_layer1[col][row] = 0\n",
+    "                if net:\n",
+    "                    if cell['net_num'] != net:\n",
+    "                        if layer == 0:\n",
+    "                            grid_matrix_layer0[col][row] = 0\n",
+    "                        else:\n",
+    "                            grid_matrix_layer1[col][row] = 0\n",
+    "                if cell['obstruction']:\n",
+    "                    if layer == 0:\n",
+    "                        grid_matrix_layer0[col][row] = 2\n",
+    "                    else:\n",
+    "                        grid_matrix_layer1[col][row] = 2\n",
     "\n",
     "    # Plot both layers\n",
     "    fig, axes = plt.subplots(1, 2, figsize=(30, 15))\n",
