--- a/Code.ipynb
+++ b/Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,8 @@
     "            if visit_counter.get((nlayer, nx, ny), 0) >= visited_num:\n",
     "                continue\n",
     "            # Check boundaries and obstructions\n",
-    "            if 0 <= nx < rows and 0 <= ny < cols and 0 <= nlayer < 2 and not grid[nlayer][nx][ny]['obstruction'] and not grid[nlayer][nx][ny]['used_in_path']:\n",
+    "            if 0 <= nx < rows and 0 <= ny < cols and 0 <= nlayer < 2 and not grid[nlayer][nx][ny]['obstruction'] and not grid[nlayer][nx][ny]['used_in_path'] and not (grid[nlayer][nx][ny]['pin'] and not (nlayer, nx, ny) in targets):\n",
+    "\n",
     "\n",
     "                # Calculate the cost to move to the neighbor\n",
     "                move_cost = grid[nlayer][nx][ny]['cost']\n",
