Fixed bugs and enhanced visualization

--- a/Code.ipynb
+++ b/Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -36,22 +36,46 @@
       "==================================================\n",
       "Net 'net3':\n",
       "--------------------------------------------------\n",
-      "  Path 1: [(0, 1, 2), (0, 2, 2), (0, 3, 2), (0, 4, 2), (1, 4, 2), (1, 4, 3), (1, 4, 4), (1, 4, 5), (1, 4, 6), (1, 4, 7)] (Length: 10)\n",
-      "  Path 2: [(1, 4, 7), (1, 4, 8), (0, 4, 8), (0, 5, 8), (0, 6, 8), (0, 7, 8), (0, 8, 8)] (Length: 7)\n",
-      "  Total Wire Length for 'net3': 17\n",
+      "  Path 1: [(0, 1, 2), (0, 2, 2), (0, 3, 2), (0, 4, 2), (1, 4, 2), (1, 4, 3), (1, 4, 4), (1, 4, 5), (1, 4, 6), (1, 4, 7)]\n",
+      "  Length for Path 1: 10\n",
+      "  Cost for Path 1: 11\n",
+      "  ******\n",
+      "  Path 2: [(1, 4, 7), (1, 4, 8), (0, 4, 8), (0, 5, 8), (0, 6, 8), (0, 7, 8), (0, 8, 8)]\n",
+      "  Length for Path 2: 7\n",
+      "  Cost for Path 2: 8\n",
+      "  ******\n",
+      " Total Wire Length for 'net3': 17\n",
+      " Total Cost for 'net3': 19\n",
       "--------------------------------------------------\n",
       "Net 'net2':\n",
       "--------------------------------------------------\n",
-      "  Path 1: [(0, 2, 3), (0, 2, 4), (0, 3, 4), (0, 4, 4), (0, 5, 4), (0, 6, 4), (1, 6, 4), (1, 6, 5), (1, 6, 6), (1, 6, 7)] (Length: 10)\n",
-      "  Path 2: [(1, 6, 7), (1, 6, 8), (1, 6, 9), (0, 6, 9), (0, 7, 9), (0, 8, 9), (0, 9, 9), (0, 10, 9)] (Length: 8)\n",
-      "  Total Wire Length for 'net2': 18\n",
+      "  Path 1: [(0, 2, 3), (0, 2, 4), (0, 3, 4), (0, 4, 4), (0, 5, 4), (0, 6, 4), (1, 6, 4), (1, 6, 5), (1, 6, 6), (1, 6, 7)]\n",
+      "  Length for Path 1: 10\n",
+      "  Cost for Path 1: 16\n",
+      "  ******\n",
+      "  Path 2: [(1, 6, 7), (1, 6, 8), (1, 6, 9), (0, 6, 9), (0, 7, 9), (0, 8, 9), (0, 9, 9), (0, 10, 9)]\n",
+      "  Length for Path 2: 8\n",
+      "  Cost for Path 2: 9\n",
+      "  ******\n",
+      " Total Wire Length for 'net2': 18\n",
+      " Total Cost for 'net2': 25\n",
       "--------------------------------------------------\n",
       "Net 'net1':\n",
       "--------------------------------------------------\n",
-      "  Path 1: [(0, 1, 1), (0, 2, 1), (0, 3, 1), (1, 3, 1), (1, 3, 2), (1, 3, 3), (0, 3, 3)] (Length: 7)\n",
-      "  Path 2: [(1, 3, 3), (1, 3, 4), (1, 3, 5), (1, 3, 6), (1, 3, 7), (0, 3, 7), (0, 4, 7), (0, 5, 7), (0, 6, 7), (0, 7, 7)] (Length: 10)\n",
-      "  Path 3: [(0, 7, 7), (0, 8, 7), (0, 9, 7), (1, 9, 7), (1, 9, 8), (1, 9, 9)] (Length: 6)\n",
-      "  Total Wire Length for 'net1': 23\n",
+      "  Path 1: [(0, 1, 1), (0, 2, 1), (0, 3, 1), (1, 3, 1), (1, 3, 2), (1, 3, 3), (0, 3, 3)]\n",
+      "  Length for Path 1: 7\n",
+      "  Cost for Path 1: 10\n",
+      "  ******\n",
+      "  Path 2: [(1, 3, 3), (1, 3, 4), (1, 3, 5), (1, 3, 6), (1, 3, 7), (0, 3, 7), (0, 4, 7), (0, 5, 7), (0, 6, 7), (0, 7, 7)]\n",
+      "  Length for Path 2: 10\n",
+      "  Cost for Path 2: 11\n",
+      "  ******\n",
+      "  Path 3: [(0, 7, 7), (0, 8, 7), (0, 9, 7), (1, 9, 7), (1, 9, 8), (1, 9, 9)]\n",
+      "  Length for Path 3: 6\n",
+      "  Cost for Path 3: 7\n",
+      "  ******\n",
+      " Total Wire Length for 'net1': 23\n",
+      " Total Cost for 'net1': 28\n",
       "--------------------------------------------------\n",
       "\n",
       "Summary\n",
@@ -515,10 +539,10 @@
     "        else:\n",
     "            grid[target[0]][target[1]][target[2]]['via'] = False  # No transition at the last cell\n",
     "            \n",
-    "        return (best_path[::-1], target)\n",
+    "        return (best_path[::-1], target, cost)\n",
     "\n",
     "    # If we reach here, the target is unreachable\n",
-    "    return ([], None)\n",
+    "    return ([], None, -1)\n",
     "\n",
     "\n",
     "def route_nets(grid, nets, bend_penalty, via_penalty):\n",
@@ -544,9 +568,11 @@
     "\n",
     "    # Store results\n",
     "    net_paths = {}\n",
-    "    path_num = 0\n",
+    "    \n",
+    "    costs = {}\n",
     "    \n",
     "    for net_name, pins in ordered_nets:\n",
+    "        path_num = 0\n",
     "        net_num = list(nets.keys()).index(net_name) + 1\n",
     "        # Check if the pins list is empty\n",
     "        if not pins:\n",
@@ -561,7 +587,7 @@
     "        sources = set([pins[0]])\n",
     "\n",
     "        while not all(pins_covered_map.values()):\n",
-    "            path, target = find_path(grid, list(sources), unreached_targets, bend_penalty, via_penalty, 1)\n",
+    "            path, target, cost = find_path(grid, list(sources), unreached_targets, bend_penalty, via_penalty, 1)\n",
     "            if not path:\n",
     "                print(f\"Error: Unable to find a path for net '{net_name}'.\")\n",
     "                break\n",
@@ -570,6 +596,9 @@
     "            for cell in path:\n",
     "                grid[cell[0]][cell[1]][cell[2]]['path_num'] = path_num\n",
     "                grid[cell[0]][cell[1]][cell[2]]['net_num'] = net_num\n",
+    "            # store the cost of the path of the net\n",
+    "            val = (net_num, path_num)\n",
+    "            costs[val] = cost\n",
     "            path_num += 1\n",
     "            pins_covered_map[target] = True\n",
     "\n",
@@ -578,7 +607,7 @@
     "        # Store the path for the net    \n",
     "        net_paths[net_name] = paths\n",
     "\n",
-    "    return net_paths\n",
+    "    return net_paths, costs\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -586,7 +615,7 @@
     "    parse_input_file(input_file)  # Parse the input file\n",
     "    initialize_grid()  # Initialize the 3D grid\n",
     "    # Route the nets\n",
-    "    routed_nets = route_nets(grid, nets, bend_penalty, via_penalty)\n",
+    "    routed_nets, costs = route_nets(grid, nets, bend_penalty, via_penalty)\n",
     "\n",
     "\n",
     "    print(\"=\" * 50)\n",
@@ -602,16 +631,22 @@
     "    for net_name, paths in routed_nets.items():\n",
     "        net_length = 0\n",
     "        print(f\"Net '{net_name}':\")\n",
+    "        net_num = int(net_name[-1])\n",
+    "\n",
     "        print(\"-\" * 50)\n",
     "        for i, path in enumerate(paths):\n",
     "            path_length = len(path)\n",
-    "            print(f\"  Path {i+1}: {path} (Length: {path_length})\")\n",
+    "            print(f\"  Path {i+1}: {path}\")\n",
+    "            print(f\"  Length for Path {i+1}: {path_length}\")\n",
     "            net_length += path_length\n",
     "            if path_length > longest_route:\n",
     "                longest_route = path_length\n",
     "                longest_net = net_name\n",
     "                longest_path_number = i + 1  # Path numbers are 1-based\n",
-    "        print(f\"  Total Wire Length for '{net_name}': {net_length}\")\n",
+    "            print(f\"  Cost for Path {i+1}: {costs[(net_num, i)]}\")\n",
+    "            print(\"  ******\")\n",
+    "        print(f\" Total Wire Length for '{net_name}': {net_length}\")\n",
+    "        print(f\" Total Cost for '{net_name}': {sum(costs[(net_num, i)] for i in range(len(paths)))}\")\n",
     "        print(\"-\" * 50)\n",
     "        total_wire_length += net_length\n",
     "        if net_length > longest_net_length:\n",
@@ -624,7 +659,7 @@
     "    print(f\"Path Number of Longest Route: {longest_path_number}\")\n",
     "    print(f\"Total Wire Length Across All Nets: {total_wire_length}\")\n",
     "    print(\"=\" * 50)\n",
-    "                \n",
+    "    # print costs\n",
     "    visualize_3d_grid_matplotlib(net=3)"
    ]
   },
