--- a/Code.ipynb
+++ b/Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -84,6 +84,7 @@
       "Net with Longest Route: 'net3'\n",
       "Path Number of Longest Route: 1\n",
       "Total Wire Length Across All Nets: 58\n",
+      "Total cost of the routing is: 72\n",
       "==================================================\n"
      ]
     },
@@ -627,7 +628,7 @@
     "    longest_net = \"\"\n",
     "    longest_net_length = 0\n",
     "    longest_path_number = 0  # To track the path number of the longest route\n",
-    "\n",
+    "    total_cost = 0\n",
     "    for net_name, paths in routed_nets.items():\n",
     "        net_length = 0\n",
     "        print(f\"Net '{net_name}':\")\n",
@@ -644,6 +645,7 @@
     "                longest_net = net_name\n",
     "                longest_path_number = i + 1  # Path numbers are 1-based\n",
     "            print(f\"  Cost for Path {i+1}: {costs[(net_num, i)]}\")\n",
+    "            total_cost += costs[(net_num, i)]\n",
     "            print(\"  ******\")\n",
     "        print(f\" Total Wire Length for '{net_name}': {net_length}\")\n",
     "        print(f\" Total Cost for '{net_name}': {sum(costs[(net_num, i)] for i in range(len(paths)))}\")\n",
@@ -658,17 +660,11 @@
     "    print(f\"Net with Longest Route: '{longest_net}'\")\n",
     "    print(f\"Path Number of Longest Route: {longest_path_number}\")\n",
     "    print(f\"Total Wire Length Across All Nets: {total_wire_length}\")\n",
+    "    print(f\"Total cost of the routing is: {total_cost}\")\n",
     "    print(\"=\" * 50)\n",
     "    # print costs\n",
     "    visualize_3d_grid_matplotlib(net=3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
