Added 12 test cases

--- a/Code.ipynb
+++ b/Code.ipynb
@@ -728,8 +728,8 @@
     "        write_output(f\"Total cost of the routing is: {total_cost}\")\n",
     "        write_output(\"=\" * 50)\n",
     "\n",
-    "    visualize_3d_grid_matplotlib(net=3)  # Visualize the grid with net 3 and path 0\n",
-    "    visualize_3d_grid_matplotlib_combined(net=3)  # Visualize the grid with net 3 and path 0\n",
+    "    visualize_3d_grid_matplotlib()  # Visualize the grid with net 3 and path 0\n",
+    "    visualize_3d_grid_matplotlib_combined()  # Visualize the grid with net 3 and path 0\n",
     "    \n",
     "if __name__ == \"__main__\":\n",
     "    main()"
